update version to 0.0.2

--- a/example/index.html
+++ b/example/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="../lib/tinper-storage"></script>
+    <script src="../lib/tinper-storage.js"></script>
     <script>
-        // TODO
+        console.log(window.store)
     </script>
 </body>
 </html>
