--- a/example/index.html
+++ b/example/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="../lib/tinper-storage.js"></script>
+    <script src="../lib/tinper-localStorage.js"></script>
+    <script src="../lib/tinper-sessionStorage.js"></script>
     <script>
         console.log(window.store)
+        console.log(window.sessionStore)
     </script>
 </body>
 </html>
